--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <div class="container">
         <div class="header__top">
           <nav class="menu">
+            <button class="menu__btn">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
             <ul class="menu__list">
               <li class="menu__item">
                 <a href="#" class="menu__link">home</a>
